Added Some more settings

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Typescript based implementation of various data structures, algorithms and problems.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint '*/**/*.{js,ts}' --quiet --fix"
+    "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
