--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
     "compilerOptions": {
-        "pretty": false,
-        "noEmit": true,
-        "target": "es2017",
+        "target": "es5",
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "suppressImplicitAnyIndexErrors": false,
-        "resolveJsonModule": false, // Note: Do not set to true - resolveJsonModule: true cannot be combined with composite: true (see: https://github.com/microsoft/TypeScript/issues/25636)
+        "resolveJsonModule": false,
         "esModuleInterop": true,
-        "module": "es2015", // tree-shaking requires es2015 or higher
-        "moduleResolution": "node",
-        "outDir": "dist", // not used, but set to disable the error in this config: "Cannot write file '*/app.json' because it would overwrite input file.
-        "rootDir": "src",
+        "outDir": "dist",
         "noImplicitAny": true,
         "noImplicitThis": true,
         "alwaysStrict": true,
@@ -19,5 +14,11 @@
         "strictPropertyInitialization": true,
         "strictFunctionTypes": true,
         "forceConsistentCasingInFileNames": true
-    }
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
